<resources>
    <string name="app_name">Conspectium</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="homeFragment">Главная</string>
    <string name="profileFragment">Профиль</string>
    <string name="add_consp">Добавить конспект</string>
    <string name="title">Название</string>
    <string name="subject">Предмет</string>
    <string name="text_of_consp">Текст конспекта</string>
    <string name="save_consp">Сохранить конспект</string>
    <string name="searchFragment">Поиск</string>
    <string name="name_app_for_user">Конспектиум</string>

    <string name="class_5">5 класс</string>
    <string name="class_6">6 класс</string>
    <string name="class_7">7 класс</string>
    <string name="class_8">8 класс</string>
    <string name="class_9">9 класс</string>
    <string name="class_10">10 класс</string>
    <string name="class_11">11 класс</string>
    <string name="btn_settings">Настройки</string>
    <string name="about_us">О нас</string>
    <string name="btn_logout">Выйти</string>
    <string name="btn_delete_account">Удалить аккаунт</string>
    <string name="divider">──────────</string>
    <string name="block_classes">Классы</string>
    <string name="create_conspect">Создать конспект</string>
</resources>